# DreaMS-Enveda

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: tests.yml  uv-build-and-upload.yml
